# QuantumAI

./: README.md  pyproject.toml
days/2026-01-01/: README.md  hello_quantum.py
days/2026-01-02/: README.md  qgan_basics.py
days/2026-01-03/: README.md  vqe_simple.py
days/2026-01-04/: README.md  feature_maps.py
days/2026-01-05/: README.md  hybrid_qnn_pytorch.py
days/2026-01-06/: README.md  data_reuploading.py
days/2026-01-07/: README.md  barren_plateaus.py
days/2026-01-08/: README.md  mnist_prep.py
days/2026-01-09/: README.md  qgan_mnist.py
days/2026-01-10/: README.md  qvae_prototype.py
days/2026-01-11/: README.md
days/2026-01-12/: README.md
days/2026-01-13/: README.md
days/2026-01-14/: README.md
days/2026-01-15/: README.md
days/2026-01-16/: README.md
days/2026-01-17/: README.md
days/2026-01-18/: README.md
days/2026-01-19/: README.md
days/2026-01-20/: README.md
days/2026-01-21/: README.md
days/2026-01-22/: README.md
days/2026-01-23/: README.md
days/2026-01-24/: README.md
days/2026-01-25/: README.md
days/2026-01-26/: README.md
days/2026-01-27/: README.md
days/2026-01-28/: README.md
days/2026-01-29/: README.md
days/2026-01-30/: README.md
days/2026-01-31/: README.md
days/2026-02-01/: README.md
days/2026-02-02/: README.md
days/2026-02-03/: README.md
days/2026-02-04/: README.md
days/2026-02-05/: README.md
days/2026-02-06/: README.md
days/2026-02-07/: README.md
days/2026-02-08/: README.md
days/2026-02-09/: README.md
days/2026-02-10/: README.md
days/2026-02-11/: README.md
days/2026-02-12/: README.md
(+93 files in other folders)
